换了一个主题

--- a/_config.yml
+++ b/_config.yml
@@ -3,8 +3,8 @@
 # ----------------------- #
 
 url: http://wangyang10.github.io
-title: 洋哥开始写博客
-subtitle: 关于技术和生活 
+title: 洋哥de秘密基地
+subtitle: About Tech. & Live
 author: 洋哥
 simple_search: https://www.google.com/search
 description:
