--- a/_config.yml
+++ b/_config.yml
@@ -98,3 +98,7 @@ google_analytics_tracking_id:
 
 # Facebook Like
 facebook_like: false
+
+#youyan comments
+youyan_comments: true
+youyan_short_name: wangyang
