--- a/_config.yml
+++ b/_config.yml
@@ -91,7 +91,7 @@ delicious_count: 3
 
 # Disqus Comments
 disqus_short_name:
-disqus_show_comment_count: false
+disqus_show_comment_count: false 
 
 # Google Analytics
 google_analytics_tracking_id:
@@ -102,3 +102,6 @@ facebook_like: false
 #youyan comments
 youyan_comments: true
 youyan_short_name: wangyang
+
+#duoshuo comments
+duoshuo_comments: true
